migrating create room and find all endpoints
