# hotel-spring-impl/src/main/resources/api/api.yml
@@ -10,7 +10,7 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.11
 servers:
-  - url: https://localhost:8080/
+  - url: https://localhost:8080/api/v1
 tags:
   - name: booking
     description: Manage booking in the hotel
@@ -27,24 +27,93 @@ paths:
       description: Creates a booking in the hotel for a given customers and room for a determine period of timeØ
       operationId: createBooking
       requestBody:
-        description: Creates a new booking
+        description: Required data for creating a booking
         content:
           application/json:
             schema:
               $ref: "#/components/schemas/CreateBookingRequest"
         required: true
       responses:
-        "204":
+        "201":
           description: Successful operation
         "400":
-          description: Invalid ID supplied
+          description: Invalid request
         "404":
           description: Pet not found
         "405":
           description: Validation exception
+  /rooms:
+    post:
+      tags:
+        - rooms
+      summary: Creates a new room
+      description: Adds a new room to the hotel database
+      operationId: createRoom
+      requestBody:
+        description: Required information for adding a room
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateRoomRequest"
+        required: true
+      responses:
+        "201":
+          description: Room created
+        "400":
+          description: Invalid request
+    get:
+      tags:
+        - rooms
+      summary: Finds all rooms
+      description: Find all existing rooms in the hotel
+      operationId: findAll
+      responses:
+        "200":
+          description: List of the rooms in the hotel
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RoomList"
 
 components:
   schemas:
+    RoomList:
+      type: object
+      properties:
+        rooms:
+          type: array
+          items:
+            $ref: "#/components/schemas/RoomData"
+    RoomData:
+      type: object
+      properties:
+        room_id:
+          type: string
+          format: uuid
+        door_number:
+          type: string
+        room_type:
+          enum:
+            - STANDARD
+            - DOUBLE
+            - PRESIDENT
+        amount_per_night:
+          $ref: "#/components/schemas/MoneyData"
+      required:
+        - door_number
+        - room_type
+        - amount_per_night
+    MoneyData:
+      type: object
+      properties:
+        amount:
+          type: number
+          format: decimal
+        currency_code:
+          type: string
+      required:
+        - amount
+        - currency_code
     CreateBookingRequest:
       type: object
       properties:
@@ -65,3 +134,19 @@ components:
         - room_id
         - from
         - until
+    CreateRoomRequest:
+      type: object
+      properties:
+        door_number:
+          type: string
+        room_type:
+          enum:
+            - STANDARD
+            - DOUBLE
+            - PRESIDENT
+        amount_per_night:
+          $ref: "#/components/schemas/MoneyData"
+      required:
+        - door_number
+        - room_type
+        - amount_per_night
